--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   bloc: ^6.0.3
   flutter_bloc: ^6.1.1
   flutter_dotenv: ^2.1.0
+  qrscan: ^0.2.22
+  cached_network_image: ^2.5.1
 
   # Value equality
   equatable: ^1.2.5
@@ -85,8 +87,8 @@ dependencies:
   path: ^1.7.0
 
   # Maps
-  vtmap_gl: ^1.1.2
-  location: ^2.5.3
+  #vtmap_gl: ^1.1.2
+  #location: ^2.5.3
   share: ^0.6.5+4
 
   # SMS
@@ -95,6 +97,7 @@ dependencies:
   sleek_circular_slider: ^1.2.0+web
   cupertino_icons: ^1.0.0
   route_transitions: ^1.0.2
+  flutter_staggered_animations: ^0.1.3
 
   #Function
   recase: ^3.0.1
