--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.16.1
+  intl: ^0.17.0
 
   # Service locator
   get_it: ^5.0.1
@@ -48,7 +48,7 @@ dependencies:
   skeleton_animation: ^0.0.3
   shimmer: ^1.1.2
   fluttertoast: ^7.1.6
-  flutter_svg: ^0.18.0
+  flutter_svg: ^0.19.3
   flutter_rating_bar: ^3.2.0+1
   google_fonts: ^1.1.1
   flutter_slidable: ^0.5.7
@@ -121,7 +121,7 @@ dev_dependencies:
     sdk: flutter
   mockito: ^4.1.1
   flutter_launcher_icons: ^0.8.1
-  local_auth: ^0.6.3+4
+  #local_auth: ^0.6.3+5
 
 flutter_icons:
   android: true
