--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".Application"
-        android:label="Poi Collector"
+        android:label="C.A.C Báo giá"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
 
@@ -84,8 +84,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <meta-data android:name="io.flutter.network-policy"
-            android:resource="@xml/network_security_config"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
