--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  #intl: ^0.17.0
+  intl: ^0.16.1
 
   # Service locator
   get_it: ^5.0.1
@@ -48,7 +49,8 @@ dependencies:
   skeleton_animation: ^0.0.3
   shimmer: ^1.1.2
   fluttertoast: ^7.1.6
-  flutter_svg: ^0.19.3
+  #flutter_svg: ^0.19.3
+  flutter_svg: ^0.18.0
   flutter_rating_bar: ^3.2.0+1
   google_fonts: ^1.1.1
   flutter_slidable: ^0.5.7
@@ -60,6 +62,7 @@ dependencies:
 
   #WebView
   webview_flutter: ^1.0.7
+  flutter_cached_pdfview: ^0.3.5
   flutter_webview_plugin: ^0.3.11
 
   # request
