--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   bloc: ^6.0.3
   flutter_bloc: ^6.1.1
   flutter_dotenv: ^2.1.0
-  qrscan: ^0.2.22
+  #qrscan: ^0.2.22
   cached_network_image: ^2.5.1
 
   # Value equality
@@ -59,10 +59,14 @@ dependencies:
   sizer: ^1.1.8
   flutter_native_splash: ^0.2.7
   flutter_linkify: 4.0.0
+  #flutter_barcode_scanner: ^1.0.2
+  qr_code_scanner: ^0.0.12
+  vibration: ^1.7.3
 
   #WebView
   webview_flutter: ^1.0.7
   flutter_cached_pdfview: ^0.3.5
+  #pdf: ^3.1.0
   flutter_webview_plugin: ^0.3.11
 
   # request
