--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,16 +55,16 @@ dependencies:
   google_fonts: ^1.1.1
   flutter_slidable: ^0.5.7
   carousel_slider: ^2.3.1
-  readmore: ^1.0.1
+  #readmore: ^1.0.1
   sizer: ^1.1.8
   flutter_native_splash: ^0.2.7
-  flutter_linkify: 4.0.0
+  #flutter_linkify: 4.0.0
   #flutter_barcode_scanner: ^1.0.2
   qr_code_scanner: ^0.0.12
   vibration: ^1.7.3
 
   #WebView
-  webview_flutter: ^1.0.7
+  #webview_flutter: ^1.0.7
   flutter_cached_pdfview: ^0.3.5
   #pdf: ^3.1.0
   flutter_webview_plugin: ^0.3.11
@@ -75,7 +75,7 @@ dependencies:
 
   # Media
   #media_picker_builder: ^1.3.2
-  multi_image_picker: ^4.7.15
+  #multi_image_picker: ^4.7.15
   flutter_absolute_path: ^1.0.6
   lazy_load_scrollview: ^1.2.0
   #video_player: ^1.0.1
@@ -83,11 +83,11 @@ dependencies:
   image_gallery_saver: ^1.6.7
   transparent_image: ^1.0.0
   photo_view: ^0.10.3
-  image_picker: ^0.6.7+14
+  #image_picker: ^0.6.7+14
   flutter_downloader: ^1.5.2
   chewie: ^0.12.0
   ext_storage: ^1.0.3
-  thumbnails: ^1.0.1
+  #thumbnails: ^1.0.1
 
   # Path
   path_provider: ^1.6.24
@@ -99,8 +99,8 @@ dependencies:
   share: ^0.6.5+4
 
   # SMS
-  sms_autofill: ^1.2.6
-  sms: ^0.2.4
+  #sms_autofill: ^1.2.6
+  #sms: ^0.2.4
   sleek_circular_slider: ^1.2.0+web
   cupertino_icons: ^1.0.0
   route_transitions: ^1.0.2
@@ -110,7 +110,7 @@ dependencies:
   recase: ^3.0.1
   package_info: ^0.4.3+2
   awesome_dialog: ^1.2.1
-  pin_code_fields: ^6.0.1
+  #pin_code_fields: ^6.0.1
   platform_device_id: ^0.1.3
 
   #text
