--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,6 +35,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
    }
 //apply plugin: 'com.google.firebase.crashlytics'
 
+
 android {
     compileSdkVersion 28
 
@@ -48,7 +49,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.viettel.maps.tools"
+        applicationId "com.cac.demo"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -86,7 +87,9 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    // implementation platform('com.google.firebase:firebase-bom:26.2.0')
-    //implementation 'com.google.firebase:firebase-analytics'
-//    implementation 'com.google.firebase:firebase-messaging:<latest_version>'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
 }
 
+apply plugin: 'com.google.gms.google-services'
