--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   #intl: ^0.17.0
   intl: ^0.16.1
+  animated_bottom_navigation_bar: ^0.2.1
 
   # Service locator
   get_it: ^5.0.1
