--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,14 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  #intl: ^0.17.0
-  intl: ^0.16.1
-  animated_bottom_navigation_bar: ^0.2.1
+  intl: ^0.17.0
+  #intl: ^0.16.1
+  pattern_formatter: ^2.0.0
+  #  pattern_formatter: ^1.0.2
+  flutter_svg: ^0.19.3
+    #flutter_svg: ^0.18.0
+  #animated_bottom_navigation_bar: ^0.2.1
+
 
   # Service locator
   get_it: ^5.0.1
@@ -41,7 +46,6 @@ dependencies:
   shared_preferences: ^0.5.6
 
   rxdart: ^0.24.1
-  pattern_formatter: ^1.0.2
   #phone
   url_launcher: ^5.7.10
 
@@ -50,8 +54,7 @@ dependencies:
   skeleton_animation: ^0.0.3
   shimmer: ^1.1.2
   fluttertoast: ^7.1.6
-  #flutter_svg: ^0.19.3
-  flutter_svg: ^0.18.0
+
   flutter_rating_bar: ^3.2.0+1
   google_fonts: ^1.1.1
   flutter_slidable: ^0.5.7
