--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^0.19.3
 
   #animated_bottom_navigation_bar: ^0.2.1
+  #flutter_appavailability: ^0.0.21
   image_picker: 0.6.6+4
   cloud_firestore: ^0.14.1+3
   firebase_storage: 5.0.0
