--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:name=".Application"
         android:label="C.A.C Báo giá"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_app"
         android:usesCleartextTraffic="true">
 
         <provider
