--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -66,7 +66,7 @@
 
     <!-- Permission options for the `speech` group -->
     <key>NSSpeechRecognitionUsageDescription</key>
-    <string>Ghi âm giọng nói để tìm kiếm</string>
+    <string>Ghi âm giọng nói để gửi tin nhắn âm thanh</string>
 
     <!-- Permission options for the `sensors` group -->
     <key>NSMotionUsageDescription</key>
@@ -75,8 +75,8 @@
     <!-- Permission options for the `photos` group -->
     <key>NSPhotoLibraryUsageDescription</key>
     <string>Truy cập thư viện ảnh để chọn ảnh khi gửi tin nhắn</string>
-    
-
+   <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Truy cập thư viện ảnh để lưu hình ảnh</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
