--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,8 +125,8 @@ dependencies:
   auto_size_text: ^2.1.0
 
   # Firebase
-  firebase_core: ^0.5.0
-  firebase_messaging: ^7.0.3
+  firebase_core: 0.5.0
+  firebase_messaging: 7.0.3
   flutter_local_notifications: ^3.0.2
   #firebase_crashlytics: ^0.2.4
   #http_proxy: ^1.1.0
@@ -134,7 +134,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.1
+  #mockito: ^4.1.1
   flutter_launcher_icons: ^0.8.1
   #local_auth: ^0.6.3+5
 
