--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,8 +125,8 @@ dependencies:
   auto_size_text: ^2.1.0
 
   # Firebase
-  firebase_core: 0.5.0
-  firebase_messaging: 7.0.3
+  firebase_core: ^0.5.0
+  firebase_messaging: ^7.0.3
   flutter_local_notifications: ^3.0.2
   #firebase_crashlytics: ^0.2.4
   #http_proxy: ^1.1.0
@@ -154,7 +154,6 @@ flutter:
     - assets/launcher/
     - lang/vi.json
     - lang/en.json
-    - assets/icons/icon_gps_3x.png
 flutter_intl:
   enabled: true
 flutter_native_splash:
