--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,8 +130,8 @@ dependencies:
   flutter_local_notifications: ^3.0.2
   #firebase_crashlytics: ^0.2.4
   #http_proxy: ^1.1.0
-  #video_player: ^1.0.1
-  #video_thumbnail: ^0.2.4
+  video_player: ^1.0.1
+  video_thumbnail: ^0.2.4
   
 dev_dependencies:
   flutter_test:
